cmake_minimum_required(VERSION 3.26)
project(Logic)

set(CMAKE_CXX_STANDARD 17)

add_executable(Logic main.cpp
        Problemas_varios/Canguros.cpp
        Problemas_varios/Marathon.cpp
        Problemas_varios/sucesionFibonacci.cpp
        Problemas_varios/Ejercitando_la_muñeca.cpp
        Problemas_varios/Aburrido.cpp
        Problemas_varios/ArboldeNavidad.cpp
        Problemas_varios/MensjesDRM.cpp
        Problemas_varios/Trik.cpp
        Problemas_varios/palabraCorta.cpp
        "Problemas_varios/Escalera#.cpp"
        Problemas_varios/Gnomos.cpp
        Problemas_varios/PermutacionCheker.cpp
        Problemas_varios/letraH.cpp
        Problemas_varios/vectorParesOrdenado.cpp
        Problemas_varios/apilandoDigitos.cpp
        Problemas_varios/unidadesBritanicas.cpp
        Problemas_varios/generadorFibonacci.cpp
        Problemas_varios/acertijo.cpp
        Problemas_varios/formadosEnLaCafeteria.cpp
        Problemas_varios/ceramica.cpp
)
